refactor: group 도메인 메서드 명 변경, 메서드 추출